--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "nodejs",
+  "name": "cococbot",
   "version": "1.0.0",
-  "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/node": "^22.13.11",
-    "discord.js": "^14.23.2",
-    "express": "^5.1.0"
+    "discord.js": "^14.16.3",
+    "express": "^4.21.1"
   }
 }
