--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "cococbot",
+  "name": "nodejs",
   "version": "1.0.0",
-  "type": "module",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.16.3",
-    "express": "^4.21.1"
+    "@types/node": "^22.13.11",
+    "discord.js": "^14.23.2",
+    "express": "^5.1.0"
   }
 }
